[project]
name = "lerf"
version = "0.1.1"

dependencies=[
    "open_clip_torch",
    "transformers",
    "timm>=0.9.8",
    "ftfy",
    "regex",
    "tqdm",
    "clip @ git+https://gitee.com/TheVeryDarkness/CLIP.git",
    "nerfstudio>=0.3.1"
]

[tool.setuptools.packages.find]
include = ["lerf*"]

[project.entry-points.'nerfstudio.method_configs']
lerf = 'lerf.lerf_config:lerf_method'
lerf_big = 'lerf.lerf_config:lerf_method_big'
lerf_lite = 'lerf.lerf_config:lerf_method_lite'
lerf_siglip = 'lerf.lerf_config:lerf_method_siglip'
